--- a/style.css
+++ b/style.css
@@ -11,8 +11,11 @@ h1 {
     color: orange;
 }
 
-.flexible-container {
+section {
     display: flex;
+}
+
+.top-banner {
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
 }
@@ -31,6 +34,5 @@ h1 {
     border-radius: 7px;
 }
 
-.banner-img {
-    /* width: 85%; */
-}
+
+/* flexible-container */
